namespace java com.microsoft.corfu.sequencer


service CorfuSequencer {

	i64 nextpos();
		
}
